# AoC2022

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  main.rs  util.rs  xmodem.rs
